Triple formation last build

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -15,7 +15,7 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid" id="search">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="col-md-12 form-group label-floating">
