--- a/startpage/index.html
+++ b/startpage/index.html
@@ -29,7 +29,7 @@
 <br>
 <div class="container">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-3">
 			<div class="well" id="col1">
 				<h2>All the time</h2><hr>
 				<ul>
@@ -41,14 +41,7 @@
 						<i class="material-icons">phone_iphone</i>
 						<a href="https://www.messenger.com/" class="btn btn-default">Messenger</a>
 					</li>
-				</ul>
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="well"  id="col2">
-				<h2>Few times a day</h2><hr>
-				<ul>
-					<li>
+                    <li>
 						<i class="material-icons">file_download</i>
 						<a href="https://iptorrents.com" class="btn btn-default">IPTorrents</a>
 					</li>
@@ -72,8 +65,13 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-md-4">
-			<div class="well" id="col3">
+        <div class="col-md-6" id="">
+            <div class="center_img">
+                <img src="images/0001a.jpg" alt="Mountain View" style="width:100%;height:1250%;">
+            </div>    
+        </div>
+		<div class="col-md-3">
+			<div class="well" id="col2">
 				<h2>Waste of time</h2><hr>
 				<ul>
 					<li>
@@ -103,11 +101,12 @@
 				</ul>
 			</div>
 		</div>
+        
 	</div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script type="text/javascript">
-	$.material.init();
+    $.material.init();
 </script>
 <script src="script.js"></script>
 </body>
