--- a/startpage/index.html
+++ b/startpage/index.html
@@ -67,7 +67,7 @@
 		</div>
         <div class="col-md-6" id="">
             <div class="center_img">
-                <img src="images/0001a.jpg" alt="Mountain View" style="width:100%;height:1250%;">
+                <img src="images/1.jpg" alt="Center pic" style="width:100%;height:1250%;">
             </div>    
         </div>
 		<div class="col-md-3">
