--- a/startpage/index.html
+++ b/startpage/index.html
@@ -8,106 +8,56 @@
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<!-- Bootstrap -->
-	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 
 	<!-- Bootstrap Material Design -->
-	<link href="bootstrap-material-design-master/dist/css/bootstrap-material-design.css" rel="stylesheet">
+	<!--<link href="bootstrap-material-design-master/dist/css/bootstrap-material-design.css" rel="stylesheet">-->
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
-<div class="container-fluid" id="search">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="col-md-12 form-group label-floating">
-				<input class="form-control" id="search" placeholder="Search Google" type="text" style="color: white; text-align: center; margin-left: auto; margin-right: auto; width: 60%">
-				<div class="col-md-12 text-center">
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<br>
+
 <div class="container">
 	<div class="row">
-		<div class="col-md-3">
-			<div class="well" id="col1">
-				<h2>All the time</h2><hr>
-				<ul>
-					<li>
-						<i class="material-icons">laptop</i>
-						<a href="https://www.facebook.com/" class="btn btn-default">Facebook</a>
-					</li>
-					<li>
-						<i class="material-icons">phone_iphone</i>
-						<a href="https://www.messenger.com/" class="btn btn-default">Messenger</a>
-					</li>
-                    <li>
-						<i class="material-icons">file_download</i>
-						<a href="https://iptorrents.com" class="btn btn-default">IPTorrents</a>
-					</li>
-					<li>
-						<i class="material-icons">laptop_mac</i>
-						<a href="http://www.macrumors.com" class="btn btn-default">MacRumors</a>
-					</li>
-					<li>
-						<i class="material-icons">cloud_queue</i>
-						<a href="https://www.dropbox.com/" class="btn btn-default">Dropbox</a>
-					</li>
-					
-					<li>
-						<i class="material-icons">play_circle_outline</i>
-						<a href="https://youtube.com/" class="btn btn-default">YouTube</a>
-					</li>
-					<li>
-						<i class="material-icons">code</i>
-						<a href="https://www.github.com/" class="btn btn-default">Github</a>
-					</li>
-				</ul>
-			</div>
+		<div class="main-box">
+			<!--<label>Google search: </label>-->
+			
+			<input id="search" name="search"></input>
+		
+			<ul>
+				<li>
+					<i class="material-icons">laptop</i>
+					<a href="https://www.facebook.com/" class="btn btn-default">Facebook</a>
+				</li>
+				<li>
+					<i class="material-icons">phone_iphone</i>
+					<a href="https://www.messenger.com/" class="btn btn-default">Messenger</a>
+				</li>
+				<li>
+					<i class="material-icons">laptop_mac</i>
+					<a href="http://www.macrumors.com" class="btn btn-default">MacRumors</a>
+				</li>
+				<li>
+					<i class="material-icons">play_circle_outline</i>
+					<a href="https://youtube.com/" class="btn btn-default">YouTube</a>
+				</li>
+				<li>
+					<i class="material-icons">code</i>
+					<a href="https://www.github.com/" class="btn btn-default">Github</a>
+				</li>
+				<li>
+					<i class="material-icons">plus_one</i>
+					<a href="https://www.reddit.com/" class="btn btn-default">Reddit</a>
+				</li>
+			</ul>
 		</div>
-        <div class="col-md-6" id="">
-            <div class="center_img">
-                <img src="images/1.jpg" alt="Center pic" style="width:100%;height:1250%;">
-            </div>    
-        </div>
-		<div class="col-md-3">
-			<div class="well" id="col2">
-				<h2>Waste of time</h2><hr>
-				<ul>
-					<li>
-						<i class="material-icons">plus_one</i>
-						<a href="https://www.reddit.com/" class="btn btn-default">Front</a>
-					</li>
-					<li>
-						<i class="material-icons">art_track</i>
-						<a href="https://www.reddit.com/r/apple" class="btn btn-default">Apple</a>
-					</li>
-					<li>
-						<i class="material-icons">art_track</i>
-						<a href="https://www.reddit.com/r/pokemongo" class="btn btn-default">Pokemon GO</a>
-					</li>
-					<li>
-						<i class="material-icons">art_track</i>
-						<a href="https://www.reddit.com/r/wallpapers" class="btn btn-default">Wallpapers</a>
-					</li>
-					<li>
-						<i class="material-icons">art_track</i>
-						<a href="https://www.reddit.com/r/startpages" class="btn btn-default">Startpages</a>
-					</li>
-                    <li>
-						<i class="material-icons">art_track</i>
-						<a href="https://www.reddit.com/r/unixporn" class="btn btn-default">Unixporn</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-        
+
 	</div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script type="text/javascript">
-    $.material.init();
-</script>
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="script.js"></script>
+
 </body>
 </html>
