--- a/startpage/index.html
+++ b/startpage/index.html
@@ -19,8 +19,7 @@
 <div class="container">
 	<div class="row">
 		<div class="main-box">
-			<!--<label>Google search: </label>-->
-			
+			<label id="searchLabel">Google search: </label>
 			<input id="search" name="search"></input>
 		
 			<ul>
@@ -33,7 +32,7 @@
 					<a href="https://www.messenger.com/" class="btn btn-default">Messenger</a>
 				</li>
 				<li>
-					<i class="material-icons">laptop_mac</i>
+					<i class="material-icons vcenter">laptop_mac</i>
 					<a href="http://www.macrumors.com" class="btn btn-default">MacRumors</a>
 				</li>
 				<li>
